Added new autotiling script, written by me

--- a/i3/config
+++ b/i3/config
@@ -1,10 +1,12 @@
-#                  ___ _____    ____ ___  _   _ _____ ___ ____ 
-#                 |_ _|___ /   / ___/ _ \| \ | |  ___|_ _/ ___|
-#                  | |  |_ \  | |  | | | |  \| | |_   | | |  _ 
-#                  | | ___) | | |__| |_| | |\  |  _|  | | |_| |
-#                 |___|____/   \____\___/|_| \_|_|   |___\____|
-#
-#                                Written by Daniel                                            
+#   ____   _____  _____  _____  _____  __     _____  _____  _____  _____  __     ____   _____ 
+#  |    \ |  _  ||   | ||     ||   __||  |   | __  ||     ||   | ||  _  ||  |   |    \ |   __|
+#  |  |  ||     || | | ||-   -||   __||  |__ |    -||  |  || | | ||     ||  |__ |  |  ||__   |
+#  |____/ |__|__||_|___||_____||_____||_____||__|__||_____||_|___||__|__||_____||____/ |_____|
+#  
+#  github: https://github.com/danielronalds                                                   
+#  
+#  I3 Config file  
+#  
 
 # Setting superkey as mod key
 set $mod Mod4
