--- a/i3/config
+++ b/i3/config
@@ -41,7 +41,7 @@ bindsym $mod+d exec rofi -show drun
 bindsym $mod+Shift+s exec rofi -show file-browser
 
 # start a terminal
-bindsym $mod+Return exec i3-sensible-terminal
+bindsym $mod+Return exec kitty
 
 # start Firefox
 bindsym $mod+Shift+Return exec firefox
